# invoice_management

./: .gitignore  Dockerfile  HELPER.md  LICENSE  README.md  TODO.md  docker-compose.yml  env.example  init.sql  pyproject.toml
cards/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
cards/templates/cards/: create-modal.html  list.html
company/: admin.py  forms.py  models.py  urls.py  views.py
config/: adapter.py  asgi.py  dashboard_views.py  urls.py  user_panel_views.py  wsgi.py
config/settings/: common.py  development.py  production.py  staging.py  third_party_configs.py
deals/: admin.py  forms.py  models.py  urls.py  views.py
invoice/: admin.py  forms.py  models.py  urls.py  views.py
invoice/templates/invoice/: company-invoice-list.html  invoice-detail.html  invoice-list.html
nginx/: nginx.conf
service/: admin.py  forms.py  models.py  urls.py  views.py
static/: staticfiles.json
static/vendors/jquery-cards/: card-conf.0bfa1a37c69e.js  card-conf.19b2a86cb76f.js  card-conf.68c20e156f84.js  (+3 more)
templates/account/: base.html  email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  password_set.html  signup.html
templates/admin_panel/: base.html
templates/handlers/: 500.html
users/: admin.py  forms.py  models.py  urls.py  views.py
utils/: admin.py  choices.py  context_processors.py  custom_form_widgets.py  decorators.py  forms.py  helpers.py  image_upload_helpers.py  mixins.py  models.py  snippets.py  staticData.json  urls.py  views.py
utils/templatetags/: custom_tags.py
(+45 files in other folders)
