[tool.poetry]
name = "titas"
version = "0.1.0"
description = "Client Management Software for Titas"
authors = ["NumanIbnMazid <numanibnmazid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
python-dotenv = "^0.19.2"
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.2"
whitenoise = "^5.3.0"
dj-database-url = "^0.5.0"
python-memcached = "^1.59"
psycopg2-binary = "^2.9.2"
Pillow = "^8.4.0"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
