[tool.poetry]
name = "titas"
version = "0.1.0"
description = "Titas Client Management System"
authors = ["NumanIbnMazid <numanibnmazid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
python-dotenv = "^0.19.2"
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.2"
whitenoise = "^5.3.0"
dj-database-url = "^0.5.0"
python-memcached = "^1.59"
psycopg2-binary = "^2.9.2"
Pillow = "^8.4.0"
autopep8 = "^1.6.0"
django-ckeditor = "^6.1.0"
django-widget-tweaks = "^1.4.9"
django-allauth = "^0.46.0"
django-select2 = "^7.9.0"
django-redis = "^5.0.0"
xhtml2pdf = "^0.2.5"
pdfkit = "^1.0.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
